fixed button alignment issue

--- a/styles/manager.scss
+++ b/styles/manager.scss
@@ -231,9 +231,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 46.5%;
-  margin-top: 1%;
-  margin-bottom: 1%;
+  // margin-left: 46.5%;
+  // margin-top: 1%;
+  // margin-bottom: 1%;
   width: 120px;
   height: 40px;
   background-color: #2196f3;
@@ -243,6 +243,11 @@ header {
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
+}
+#annoying-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #category {
